# online-courses-cpp

./: README1.md
.gitignore/: .gitignore
CMakeLists.txt/: CMakeLists.txt
README.md/: README.md
app/: main.cpp
src/auth/: AuthService.hpp
src/config/: Config.hpp
src/course/: CatalogRepository.hpp  Course.hpp  CourseService.hpp  Enrollment.hpp  Serialization.hpp  Statistics.hpp
src/notify/: Notifier.hpp
src/security/: AccessControl.hpp
src/utils/: EmailValidator.hpp  Logger.hpp
tests/: integration_auth_course.cpp  integration_notify_course.cpp  test_access.cpp  test_auth.cpp  test_config.cpp  test_course.cpp  test_notify.cpp  test_security.cpp
